[gd_scene load_steps=16 format=2]

[ext_resource path="res://new_dynamicfont.tres" type="DynamicFont" id=1]
[ext_resource path="res://TT2020StyleB-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Menu.gd" type="Script" id=3]
[ext_resource path="res://updown.png" type="Texture" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.211765, 0.192157, 0.278431, 0.901961 )

[sub_resource type="StyleBoxFlat" id=2]

[sub_resource type="DynamicFont" id=3]
size = 26
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 28
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=5]

[sub_resource type="DynamicFont" id=6]
size = 28
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 0.960784, 0.85098, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0, 0, 0, 1 )
border_blend = true

[sub_resource type="DynamicFont" id=8]
size = 19
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=9]

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=11]
size = 26
font_data = ExtResource( 2 )

[node name="Menu" type="Node2D"]
script = ExtResource( 3 )

[node name="Group" type="Node2D" parent="."]
visible = false

[node name="BGRect" type="Button" parent="Group"]
margin_left = -20.0
margin_top = -20.0
margin_right = 1020.0
margin_bottom = 620.0
custom_styles/disabled = SubResource( 1 )
disabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="Group"]
margin_left = 20.0
margin_top = 100.0
margin_right = 140.0
margin_bottom = 140.0
custom_fonts/font = ExtResource( 1 )
text = "QUIT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Debug" type="Button" parent="Group"]
margin_left = 80.0
margin_top = -80.0
margin_right = 320.0
margin_bottom = -40.0
custom_fonts/font = ExtResource( 1 )
text = "SHOW / HIDE DEBUG"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsButton" type="Button" parent="Group"]
margin_left = 20.0
margin_top = 60.0
margin_right = 140.0
margin_bottom = 100.0
custom_fonts/font = ExtResource( 1 )
text = "CREDITS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Update" type="Button" parent="Group"]
margin_left = -420.0
margin_top = 220.0
margin_right = -20.0
margin_bottom = 260.0
custom_fonts/font = ExtResource( 1 )
text = "UPDATE LIST"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Create" type="Button" parent="Group"]
margin_left = 20.0
margin_top = 460.0
margin_right = 140.0
margin_bottom = 580.0
custom_fonts/font = ExtResource( 1 )
text = "CREATE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Join" type="Button" parent="Group"]
margin_left = 440.0
margin_top = 440.0
margin_right = 560.0
margin_bottom = 480.0
custom_fonts/font = ExtResource( 1 )
text = "JOIN"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Leave" type="Button" parent="Group"]
margin_left = 160.0
margin_top = 540.0
margin_right = 340.0
margin_bottom = 580.0
custom_fonts/font = ExtResource( 1 )
text = "LEAVE GAME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="Group"]
margin_left = 340.0
margin_top = 540.0
margin_right = 560.0
margin_bottom = 580.0
custom_fonts/font = ExtResource( 1 )
text = "START / REMATCH"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Connect" type="Button" parent="Group"]
margin_left = 160.0
margin_top = 100.0
margin_right = 560.0
margin_bottom = 140.0
custom_fonts/font = ExtResource( 1 )
text = "CONNECT / RECONNECT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ServerStatus" type="Label" parent="Group"]
margin_left = 160.0
margin_top = 20.0
margin_right = 560.0
margin_bottom = 60.0
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "SERVER STATUS: DISCONNECTED"
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameStatus" type="Label" parent="Group"]
margin_left = 160.0
margin_top = 480.0
margin_right = 560.0
margin_bottom = 520.0
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 4 )
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LobbyStatus" type="Label" parent="Group"]
margin_left = 160.0
margin_top = 380.0
margin_right = 560.0
margin_bottom = 420.0
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 4 )
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IPLabel" type="Label" parent="Group"]
margin_left = 160.0
margin_top = 60.0
margin_right = 300.0
margin_bottom = 100.0
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 4 )
text = "ADDRESS:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="Label" parent="Group"]
margin_left = 20.0
margin_top = 160.0
margin_right = 140.0
margin_bottom = 200.0
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 4 )
text = "OPTIONS"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="Group"]
margin_left = 160.0
margin_top = 440.0
margin_right = 240.0
margin_bottom = 480.0
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 4 )
text = "NAME:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IPText" type="LineEdit" parent="Group"]
margin_left = 300.0
margin_top = 60.0
margin_right = 560.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 6 )
max_length = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameText" type="LineEdit" parent="Group"]
margin_left = 240.0
margin_top = 440.0
margin_right = 440.0
margin_bottom = 480.0
custom_fonts/font = SubResource( 6 )
max_length = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GamesList" type="ItemList" parent="Group"]
margin_left = 160.0
margin_top = 160.0
margin_right = 560.0
margin_bottom = 380.0
custom_fonts/font = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScorePad" type="Label" parent="Group"]
margin_left = 580.0
margin_top = 20.0
margin_right = 980.0
margin_bottom = 580.0
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0.784314, 1 )
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsBG" type="Button" parent="Group"]
margin_left = 20.0
margin_top = 200.0
margin_right = 140.0
margin_bottom = 440.0
custom_fonts/font = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayingFor" type="LineEdit" parent="Group"]
margin_left = 20.0
margin_top = 240.0
margin_right = 140.0
margin_bottom = 280.0
align = 1
max_length = 14
placeholder_text = "Â¿playing for?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HellRound" type="SpinBox" parent="Group"]
margin_left = 20.0
margin_top = 200.0
margin_right = 140.0
margin_bottom = 240.0
theme = SubResource( 9 )
custom_icons/updown = ExtResource( 4 )
min_value = 1.0
max_value = 13.0
value = 13.0
align = 1
prefix = "hell @"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bowers" type="CheckBox" parent="Group"]
margin_left = 20.0
margin_top = 280.0
margin_right = 140.0
margin_bottom = 320.0
disabled = true
text = "bowers"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FairCards" type="CheckBox" parent="Group"]
margin_left = 20.0
margin_top = 320.0
margin_right = 140.0
margin_bottom = 360.0
disabled = true
text = "fair cards"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlindScoring" type="CheckBox" parent="Group"]
margin_left = 20.0
margin_top = 360.0
margin_right = 140.0
margin_bottom = 400.0
disabled = true
text = "blind scoring"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FutureOption" type="CheckBox" parent="Group"]
margin_left = 20.0
margin_top = 400.0
margin_right = 140.0
margin_bottom = 440.0
disabled = true
text = "future option?"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="Label" parent="Group"]
visible = false
margin_left = 80.0
margin_top = 80.0
margin_right = 920.0
margin_bottom = 520.0
custom_styles/normal = SubResource( 10 )
custom_fonts/font = SubResource( 11 )
text = "HELL & BACK (v1.0.0)

code: github.com/sporktank/hell-and-back
font: fontlibrary.org/en/font/tt2020-style-b
gfx: kenney.nl/assets/boardgame-pack
gfx: kenney.nl/assets/emotes-pack
gfx: gooseninja.itch.io/pixel-playing-cards
sfx: kenney.nl/assets/casino-audio
testers: mjs, llxu, bdk, #1sl, mgi, 
smg, zz, quoth, jig, samd

Thanks for playing!"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsClose" type="Button" parent="Group/Credits"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -120.0
margin_top = -100.0
margin_right = 920.0
margin_bottom = 540.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Button" parent="."]
self_modulate = Color( 1, 1, 1, 0.592157 )
margin_left = 20.0
margin_top = 20.0
margin_right = 140.0
margin_bottom = 60.0
hint_tooltip = "Press \"M\" for menu."
custom_fonts/font = ExtResource( 1 )
text = "MENU"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Group/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Group/Debug" to="." method="_on_Debug_pressed"]
[connection signal="pressed" from="Group/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="Group/Update" to="." method="_on_Update_pressed"]
[connection signal="pressed" from="Group/Create" to="." method="_on_Create_pressed"]
[connection signal="pressed" from="Group/Join" to="." method="_on_Join_pressed"]
[connection signal="pressed" from="Group/Leave" to="." method="_on_Leave_pressed"]
[connection signal="pressed" from="Group/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Group/Connect" to="." method="_on_Connect_pressed"]
[connection signal="pressed" from="Group/Credits/CreditsClose" to="." method="_on_CreditsClose_pressed"]
[connection signal="pressed" from="Menu" to="." method="_on_Menu_pressed"]
